# pgprism

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  pgprism.toml
.cargo/: config.toml
.config/: otel-collector-config.yaml
.config/grafana/provisioning/dashboards/: dashboards.yaml  pgprism.json
.config/grafana/provisioning/datasources/: clickhouse.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/observability/: metrics.rs  mod.rs
src/runtime/: mod.rs  worker.rs
