[package]
name = "pgprism"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
ctrlc = "3.5.2"
monoio = { version = "0.2.4", features = ["macros"] }
num_cpus = "1.17.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1" }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.31.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
# Don't Panic
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Don't Fail Silently
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
